fixed text shadow on header and made footer layout not squished on mobile.

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 footer i{
     align-self: center;
     margin: auto;
+    padding:0;
 
 }
 body {
